# proj-mmt

./: ClientUIState.hpp  CryptEngine.hpp  Engine.hpp  FileCommand.cpp  FileEngine.cpp  GuiScrollableText.hpp  InternalUtilities.hpp  Message.hpp  MessageParser.hpp  README.md  TestNonBlocking.cpp  ThreadWrapper.hpp  capture-webcam.cpp  client.cpp  credential.json  internal_utility.hpp  leblanc.cpp  server.cpp  server_old.cpp
build-config/: CMakeLists.txt  build.py  clean.bat  client-mingw-debug.bat  mingw-debug.bat  mingw-release.bat
curl/dep/nghttp3/: ChangeLog.txt
curl/dep/ngtcp2/: ChangeLog.txt
example/: TestKeylog.cpp  funni-fullscreen-coloring.c  i_shell_link.cpp  newfileFetcher.cpp  sodiumtest.cpp
imgui-sfml/: CMakeLists.txt  LICENSE  Makefile
imgui-sfml/include/: imconfig.h
imgui-win32-dx9/: CMakeLists.txt
include/: ClientUIState.hpp  CryptHandler.hpp  Engine.hpp  FunctionalityStruct.hpp  GmailLib.hpp  ImGuiScrollableText.hpp  ImGuiStdString.hpp  InternalUtilities.hpp  Message.hpp  PeerConnection.hpp  ServerMessageHandler.hpp  ShutdownController.hpp  SocketHelper.hpp  ThreadWrapper.hpp  UrlUtilities.hpp  server.hpp
src/: client.cpp  server.cpp
src/component/: CryptHandler.cpp  GmailLib.cpp  ImGuiScrollableText.cpp  ImGuiStdString.cpp  Message.cpp  PeerConnection.cpp  ServerMessageHandler.cpp  ThreadWrapper.cpp
src/engine/: EngineUtils.cpp  FileEngine.cpp  KeyloggerEngine.cpp  ProcessEngine.cpp  ScreenCapEngine.cpp  ShutdownRestartEngine.cpp  WebcamEngine.cpp
